# rust-server

./: Cargo.toml  index.html
migrations/: todos.sql
src/: configs.rs  main.rs  structs.rs
src/queries/: create.rs  delete.rs  read_all.rs  update.rs
src/routes/: create.rs  delete.rs  fallback.rs  read_all.rs  root.rs  update.rs
