[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
juniper = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "mysql" ] }
anyhow = "1.0.83"
axum-macros = "0.4.1"
tower-http = { version= "0.5.2",  features=["trace", "cors"]}
http = "1.1.0"
tower = "0.4.13"
